[package]
name = "src"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.26"
quick-xml = "0.30.0"
xmltree = "0.10.3"
url = "2.2.2"  
tokio = { version = "1.31.0", features = ["full"]}
async-std = "1.12.0"
rustls = "0.21.6"
tokio-sync = "0.1.8"
webpki = "0.22.0"
anyhow = "1.0.75"
tokio-rustls = "0.24.1"
native-tls = "0.2.11"
rustls-pemfile = "1.0.3"
webpki-roots = "0.25.2"
